--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
 </head>
 <body>
-  <<header class="site-header">
+<header class="site-header">
   <div class="container">
     <div class="logo-container">
-      <img id="site-logo-img" src="logos/logoscentrodecompras.jpeg" alt="Logo Centro de Compras" width="240" height="72">
+      <img id="site-logo-img" src="logos/logoscentrodecompras.jpeg" alt="Logo Centro de Compras" width="300" height="90">
     </div>
     <div class="header-text">
       <h1>Centro de Compras</h1>
