--- a/index.html
+++ b/index.html
@@ -1,177 +1,195 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Encontre as melhores ofertas do Brasil no Centro de Compras.">
-  <title>Centro de Compras</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba.">
+  <meta property="og:title" content="Centro de Compras - Ofertas">
+  <meta property="og:description" content="Encontre as melhores ofertas em lojas confiáveis com links de afiliados seguros.">
+  <meta property="og:image" src="logos/logos.png">
+  <meta property="og:url" content="https://www.centrodecompasos.com.br/">
+  <meta name="twitter:card" content="summary_large_image">
+  <title>Centro de Compras - Ofertas do Dia</title>
+  <link rel="preload" href="logos/logos.png" as="image">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <header class="site-header">
     <div class="container">
-      <div class="logo-container">
-        <img id="site-logo-img" src="logos/logoscentrodecompras.jpeg" alt="Logo Centro de Compras" width="300" height="90">
+      <div class="flex items-center justify-between">
+        <div class="logo-container">
+          <a href="index.html">
+            <img src="logos/logoscentrode.jpg" alt="Logo Centro de Compras" id="site-logo-img" width="300" height="90">
+          </a>
+        </div>
+        <div class="header-text">
+          <h1>Centro de Compras</h1>
+          <p>As melhores ofertas do Brasil</p>
+        </div>
+        <button class="md:hidden toggle-menu" aria-label="Abrir menu">
+          <i class="fas fa-bars"></i>
+        </button>
       </div>
-      <div class="header-text">
-        <h1>Centro de Compras</h1>
-        <p>As melhores ofertas do Brasil</p>
-      </div>
-      <button class="toggle-menu" aria-label="Abrir menu">☰</button>
-      <button class="search-icon" aria-label="Buscar">🔍</button>
+      <nav class="nav-menu hidden md:flex">
+        <div class="nav-search">
+          <input type="text" id="nav-busca" placeholder="Busque por produtos..." aria-label="Buscar produtos">
+        </div>
+        <a href="index.html">Promoções</a>
+        <a href="cupom.html">Cupom de Desconto</a>
+        <a href="sobre.html">Sobre</a>
+        <a href="contato.html">Contato</a>
+      </nav>
+      <nav class="nav-mobile hidden">
+        <div class="nav-search">
+          <input type="text" id="nav-busca-mobile" placeholder="Busque por produtos..." aria-label="Buscar produtos">
+        </div>
+        <a href="index.html">Promoções</a>
+        <a href="cupom.html">Cupom de Desconto</a>
+        <a href="sobre.html">Sobre</a>
+        <a href="contato.html">Contato</a>
+      </nav>
     </div>
-    <nav class="nav-menu">
-      <div class="nav-search">
-        <input type="text" id="nav-busca" placeholder="Buscar produtos..." aria-label="Buscar produtos">
-      </div>
-    </nav>
-    <nav class="nav-mobile">
-      <div class="nav-search">
-        <input type="text" id="nav-busca-mobile" placeholder="Buscar produtos..." aria-label="Buscar produtos">
-      </div>
-      <a href="#" onclick="filtrarPorCategoria('todas')">Início</a>
-      <a href="#" onclick="filtrarPorCategoria('eletronicos')">Eletrônicos</a>
-      <a href="#" onclick="filtrarPorCategoria('moda')">Moda</a>
-      <a href="#" onclick="filtrarPorCategoria('fitness')">Fitness</a>
-      <a href="#" onclick="filtrarPorCategoria('casa')">Casa</a>
-      <a href="#" onclick="filtrarPorCategoria('beleza')">Beleza</a>
-      <a href="#" onclick="filtrarPorCategoria('esportes')">Esportes</a>
-      <a href="#" onclick="filtrarPorCategoria('livros')">Livros</a>
-      <a href="#" onclick="filtrarPorCategoria('infantil')">Infantil</a>
-      <a href="#" onclick="filtrarPorCategoria('celulares')">Celulares</a>
-      <a href="#" onclick="filtrarPorCategoria('eletrodomesticos')">Eletrodomésticos</a>
-      <a href="#" onclick="filtrarPorCategoria('pet')">Pet</a>
-      <a href="#" onclick="filtrarPorCategoria('jardinagem')">Jardinagem</a>
-      <a href="#" onclick="filtrarPorCategoria('automotivo')">Automotivo</a>
-      <a href="#" onclick="filtrarPorCategoria('gastronomia')">Gastronomia</a>
-      <a href="#" onclick="filtrarPorCategoria('games')">Games</a>
-    </nav>
   </header>
 
   <div class="container">
     <aside class="sidebar">
       <h3>Categorias</h3>
       <ul>
-        <li><a href="#" class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')">Todas</a></li>
-        <li><a href="#" class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')">Eletrônicos</a></li>
-        <li><a href="#" class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')">Moda</a></li>
-        <li><a href="#" class="categoria-item" data-categoria="fitness" onclick="filtrarPorCategoria('fitness')">Fitness</a></li>
-        <li><a href="#" class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')">Casa</a></li>
-        <li><a href="#" class="categoria-item" data-categoria="beleza" onclick="filtrarPorCategoria('beleza')">Beleza</a></li>
-        <li><a href="#" class="categoria-item" data-categoria="esportes" onclick="filtrarPorCategoria('esportes')">Esportes</a></li>
-        <li><a href="#" class="categoria-item" data-categoria="livros" onclick="filtrarPorCategoria('livros')">Livros</a></li>
-        <li><a href="#" class="categoria-item" data-categoria="infantil" onclick="filtrarPorCategoria('infantil')">Infantil</a></li>
-        <li><a href="#" class="categoria-item" data-categoria="celulares" onclick="filtrarPorCategoria('celulares')">Celulares</a></li>
-        <li><a href="#" class="categoria-item" data-categoria="eletrodomesticos" onclick="filtrarPorCategoria('eletrodomesticos')">Eletrodomésticos</a></li>
-        <li><a href="#" class="categoria-item" data-categoria="pet" onclick="filtrarPorCategoria('pet')">Pet</a></li>
-        <li><a href="#" class="categoria-item" data-categoria="jardinagem" onclick="filtrarPorCategoria('jardinagem')">Jardinagem</a></li>
-        <li><a href="#" class="categoria-item" data-categoria="automotivo" onclick="filtrarPorCategoria('automotivo')">Automotivo</a></li>
-        <li><a href="#" class="categoria-item" data-categoria="gastronomia" onclick="filtrarPorCategoria('gastronomia')">Gastronomia</a></li>
-        <li><a href="#" class="categoria-item" data-categoria="games" onclick="filtrarPorCategoria('games')">Games</a></li>
+        <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')"><i class="fas fa-list mr-2"></i>Todas</li>
+        <li class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')"><i class="fas fa-laptop mr-2"></i>Eletrônicos</li>
+        <li class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')"><i class="fas fa-tshirt mr-2"></i>Moda</li>
+        <li class="categoria-item" data-categoria="fitness" onclick="filtrarPorCategoria('fitness')"><i class="fas fa-dumbbell mr-2"></i>Fitness</li>
+        <li class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')"><i class="fas fa-home mr-2"></i>Casa</li>
+        <li class="categoria-item" data-categoria="beleza" onclick="filtrarPorCategoria('beleza')"><i class="fas fa-magic mr-2"></i>Beleza</li>
+        <li class="categoria-item" data-categoria="esportes" onclick="filtrarPorCategoria('esportes')"><i class="fas fa-futbol mr-2"></i>Esportes</li>
+        <li class="categoria-item" data-categoria="livros" onclick="filtrarPorCategoria('livros')"><i class="fas fa-book mr-2"></i>Livros</li>
+        <li class="categoria-item" data-categoria="infantil" onclick="filtrarPorCategoria('infantil')"><i class="fas fa-baby mr-2"></i>Infantil</li>
+        <li class="categoria-item" data-categoria="celulares" onclick="filtrarPorCategoria('celulares')"><i class="fas fa-mobile-alt mr-2"></i>Celulares</li>
+        <li class="categoria-item" data-categoria="eletrodomesticos" onclick="filtrarPorCategoria('eletrodomesticos')"><i class="fas fa-blender mr-2"></i>Eletrodomésticos</li>
+        <li class="categoria-item" data-categoria="pet" onclick="filtrarPorCategoria('pet')"><i class="fas fa-paw mr-2"></i>Pet</li>
+        <li class="categoria-item" data-categoria="jardinagem" onclick="filtrarPorCategoria('jardinagem')"><i class="fas fa-leaf mr-2"></i>Jardinagem</li>
+        <li class="categoria-item" data-categoria="automotivo" onclick="filtrarPorCategoria('automotivo')"><i class="fas fa-car mr-2"></i>Automotivo</li>
+        <li class="categoria-item" data-categoria="gastronomia" onclick="filtrarPorCategoria('gastronomia')"><i class="fas fa-utensils mr-2"></i>Gastronomia</li>
+        <li class="categoria-item" data-categoria="games" onclick="filtrarPorCategoria('games')"><i class="fas fa-gamepad mr-2"></i>Games</li>
       </ul>
     </aside>
 
     <main>
       <section>
-        <h2>Lojas Parceiras</h2>
+        <h2>Ofertas do Dia</h2>
         <div class="lojas-parceiras">
+          <h3>Lojas Parceiras</h3>
           <div class="grid-lojas">
-            <div class="loja-todas ativa" data-loja="todas" onclick="filtrarPorLoja('todas')">
-              <span>Todas</span>
-            </div>
-            <div class="loja" data-loja="americanas" onclick="filtrarPorLoja('americanas')">
-              <img src="imagens/americanas-logo.png" alt="Americanas">
+            <div class="loja-todas ativa" onclick="filtrarPorLoja('todas')"><span>Todas as Lojas</span></div>
+            <div class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')">
+              <img src="logos/amazon.png" alt="Amazon" loading="lazy" width="100" height="40"><span>Amazon</span>
             </div>
             <div class="loja" data-loja="magalu" onclick="filtrarPorLoja('magalu')">
-              <img src="imagens/magalu-logo.png" alt="Magalu">
+              <img src="logos/magalu.png" alt="Magalu" loading="lazy" width="100" height="40"><span>Magalu</span>
             </div>
-            <div class="loja" data-loja="submarino" onclick="filtrarPorLoja('submarino')">
-              <img src="imagens/submarino-logo.png" alt="Submarino">
+            <div class="loja" data-loja="shein" onclick="filtrarPorLoja('shein')">
+              <img src="logos/shein.png" alt="Shein" loading="lazy" width="100" height="40"><span>Shein</span>
             </div>
             <div class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')">
-              <img src="imagens/shopee-logo.png" alt="Shopee">
+              <img src="logos/shopee.png" alt="Shopee" loading="lazy" width="100" height="40"><span>Shopee</span>
+            </div>
+            <div class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')">
+              <img src="logos/mercadolivre.png" alt="Mercado Livre" loading="lazy" width="100" height="40"><span>Mercado Livre</span>
+            </div>
+            <div class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')">
+              <img src="logos/alibaba.png" alt="Alibaba" loading="lazy" width="100" height="40"><span>Alibaba</span>
             </div>
           </div>
         </div>
         <div id="busca-feedback" class="busca-feedback"></div>
-        <div id="loading-spinner" class="loading-spinner"></div>
-        <div id="mensagem-vazia" style="display: none;">Nenhum produto encontrado.</div>
-        <div id="error-message" style="display: none; color: red;"></div>
-        <div id="grid-produtos" class="grid-produtos"></div>
-        <div class="paginacao">
+        <div class="loading-spinner" id="loading-spinner"></div>
+        <div class="grid-produtos" id="grid-produtos"></div>
+        <p class="mensagem-vazia" id="mensagem-vazia" style="display: none;">Nenhum produto encontrado.</p>
+        <p class="error-message" id="error-message" style="display: none;"></p>
+        <div class="paginacao" id="paginacao">
           <button id="prev-page" disabled>Anterior</button>
-          <span id="page-info">Página 1 de 50</span>
+          <span id="page-info">Página 1</span>
           <button id="next-page">Próxima</button>
         </div>
       </section>
+      <div class="social-links">
+        <a href="https://www.tiktok.com/@cdc.centraldecompras" target="_blank" rel="noopener noreferrer">
+          <div class="icon"><i class="fab fa-tiktok"></i></div>
+          <span>TikTok</span>
+        </a>
+        <a href="https://www.instagram.com/cdccentrodecompras/" target="_blank" rel="noopener noreferrer">
+          <div class="icon"><i class="fab fa-instagram"></i></div>
+          <span>Instagram</span>
+        </a>
+        <a href="https://x.com/ComprasCdc" target="_blank" rel="noopener noreferrer">
+          <div class="icon"><i class="fab fa-x-twitter"></i></div>
+          <span>X</span>
+        </a>
+        <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank" rel="noopener noreferrer">
+          <div class="icon"><i class="fab fa-youtube"></i></div>
+          <span>YouTube</span>
+        </a>
+      </div>
+      <div class="contact-links">
+        <a href="https://api.whatsapp.com/send?phone=5521975179737" class="whatsapp" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-whatsapp"></i> WhatsApp
+        </a>
+        <a href="https://t.me/centraldecomprascdc" class="telegram" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-telegram"></i> Telegram
+        </a>
+      </div>
     </main>
   </div>
 
-  <div class="social-links">
-    <a href="https://www.youtube.com" target="_blank">
-      <div class="icon">📺</div>
-      <span>YouTube</span>
-    </a>
-    <a href="https://www.instagram.com" target="_blank">
-      <div class="icon">📸</div>
-      <span>Instagram</span>
-    </a>
-    <a href="https://www.tiktok.com" target="_blank">
-      <div class="icon">🎵</div>
-      <span>TikTok</span>
-    </a>
-  </div>
-
-  <div class="contact-links">
-    <a href="https://wa.me/1234567890" target="_blank" class="whatsapp">
-      <i>📱</i> WhatsApp
-    </a>
-    <a href="https://t.me/yourchannel" target="_blank" class="telegram">
-      <i>✈️</i> Telegram
-    </a>
-  </div>
-
-  <div class="robo-assistente">
-    <img src="imagens/robo.png" alt="Robô Assistente" class="robo-imagem">
-    <span class="robo-texto">Como posso ajudar?</span>
+  <div class="modal" id="imageModal">
+    <button class="modal-close" onclick="closeModal()">✕</button>
+    <div class="modal-content">
+      <div class="carrossel-imagens" id="modalCarrosselImagens"></div>
+      <button class="carrossel-prev" onclick="moveModalCarrossel(-1)">◄</button>
+      <button class="carrossel-next" onclick="moveModalCarrossel(1)">▶</button>
+      <div class="carrossel-dots" id="modalCarrosselDots"></div>
+    </div>
   </div>
 
   <footer>
     <div class="container">
       <div class="footer-content">
         <div>
-          <h4>Sobre Nós</h4>
-          <p>Somos uma plataforma que reúne as melhores ofertas do Brasil.</p>
+          <h4>Centro de Compras</h4>
+          <p>O maior portal de compras do Brasil! Encontre as melhores ofertas.</p>
         </div>
         <div>
           <h4>Links Úteis</h4>
           <ul>
-            <li><a href="#">Política de Privacidade</a></li>
-            <li><a href="#">Termos de Uso</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="index.html">Promoções</a></li>
+            <li><a href="cupom.html">Cupom de Desconto</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="contato.html">Contato</a></li>
           </ul>
         </div>
         <div>
           <h4>Contato</h4>
-          <p>Email: contato@centrodecompras.com</p>
-          <p>Telefone: (11) 1234-5678</p>
+          <ul>
+            <li><a href="https://api.whatsapp.com/send?phone=5521975179737">WhatsApp</a></li>
+            <li><a href="https://t.me/centraldecomprascdc">Telegram</a></li>
+          </ul>
         </div>
       </div>
-      <p>&copy; <span id="year"></span> Centro de Compras. Todos os direitos reservados.</p>
+      <p>Todos os direitos reservados © Grupo Centro de Compra "CdC" <span id="year"></span></p>
     </div>
   </footer>
 
-  <div id="imageModal" class="modal">
-    <div class="modal-content">
-      <button class="modal-close" aria-label="Fechar modal">✖</button>
-      <div id="modalCarrosselImagens" class="carrossel-imagens"></div>
-      <button class="carrossel-prev" onclick="moveModalCarrossel(-1)">◄</button>
-      <button class="carrossel-next" onclick="moveModalCarrossel(1)">▶</button>
-      <div id="modalCarrosselDots" class="carrossel-dots"></div>
-    </div>
+  <div class="robo-assistente">
+    <a href="https://api.whatsapp.com/send?phone=5521975179737" target="_blank" rel="noopener noreferrer">
+      <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem" loading="lazy" width="60" height="60">
+      <div class="robo-texto">Posso ajudar?</div>
+    </a>
   </div>
 
-  <script src="script.js"></script>
+  <script defer src="script.js"></script>
 </body>
 </html>
