--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba.">
   <meta property="og:title" content="Centro de Compras - Ofertas">
   <meta property="og:description" content="Encontre as melhores ofertas em lojas confiáveis com links de afiliados seguros.">
-  <meta property="og:image" src="logos/logos.png">
-  <meta property="og:url" content="https://www.centrodecompasos.com.br/">
+  <meta property="og:image" content="logos/centrodecompras.jpg">
+  <meta property="og:url" content="https://www.centrodecompra.com.br/">
   <meta name="twitter:card" content="summary_large_image">
   <title>Centro de Compras - Ofertas do Dia</title>
-  <link rel="preload" href="logos/logos.png" as="image">
+  <link rel="preload" href="logos/centrodecompras.jpg" as="image">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
@@ -23,7 +23,7 @@
       <div class="flex items-center justify-between">
         <div class="logo-container">
           <a href="index.html">
-            <img src="logos/logoscentrode.jpg" alt="Logo Centro de Compras" id="site-logo-img" width="300" height="90">
+            <img src="logos/centrodecompras.jpg" alt="Logo Centro de Compras" id="site-logo-img" width="300" height="90">
           </a>
         </div>
         <div class="header-text">
@@ -35,13 +35,15 @@
         </button>
       </div>
       <nav class="nav-menu hidden md:flex">
+        <div class="nav-links">
+          <a href="index.html">Promoções</a>
+          <a href="cupom.html">Cupom de Desconto</a>
+          <a href="sobre.html">Sobre</a>
+          <a href="contato.html">Contato</a>
+        </div>
         <div class="nav-search">
           <input type="text" id="nav-busca" placeholder="Busque por produtos..." aria-label="Buscar produtos">
         </div>
-        <a href="index.html">Promoções</a>
-        <a href="cupom.html">Cupom de Desconto</a>
-        <a href="sobre.html">Sobre</a>
-        <a href="contato.html">Contato</a>
       </nav>
       <nav class="nav-mobile hidden">
         <div class="nav-search">
