--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
-ttps://www.centrodecompra.com.br/">
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
   <meta name="twitter:card" content="summary_large_image">
   <title>Centro de Compras - Ofertas do Dia</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4531749081462125" crossorigin="anonymous"></script>
   <link rel="preload" href="logos/centrodecompras.jpg" as="image">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,10 +53,18 @@ ttps://www.centrodecompra.com.br/">
       </ul>
     </aside>
 
-
     <main>
       <section>
         <h2>🛍️ Ofertas do Dia</h2>
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-4531749081462125"
+             data-ad-slot="INSIRA_SEU_AD_SLOT_ID"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
         <div class="lojas-parceiras">
           <h3>🌟 Lojas Parceiras</h3>
           <div class="grid-lojas">
