--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta name="google-adsense-account" content="ca-pub-4531749081462125">
   <meta name="twitter:card" content="summary_large_image">
   <title>Centro de Compras - Ofertas do Dia</title>
-  <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4531749081462125" crossorigin="anonymous"></script> -->
+  <!-- Script do AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4531749081462125" crossorigin="anonymous"></script>
   <link rel="preload" href="logos/centrodecompras.jpg" as="image">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -57,15 +58,16 @@
     <main>
       <section>
         <h2>🛍️ Ofertas do Dia</h2>
-        <!-- <ins class="adsbygoogle"
-             style="display:block"
+        <!-- Bloco de anúncio do AdSense (centro de compra) - Comentado para testes -->
+        <!--
+        <ins class="adsbygoogle"
+             style="display:inline-block;width:728px;height:90px"
              data-ad-client="ca-pub-4531749081462125"
-             data-ad-slot="INSIRA_SEU_AD_SLOT_ID"
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
+             data-ad-slot="5690664546"></ins>
         <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script> -->
+             (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+        -->
         <div class="lojas-parceiras">
           <h3>🌟 Lojas Parceiras</h3>
           <div class="grid-lojas">
