--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta name="google-adsense-account" content="ca-pub-4531749081462125">
   <meta name="twitter:card" content="summary_large_image">
   <title>Centro de Compras - Ofertas do Dia</title>
-  <!-- Script do AdSense -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4531749081462125" crossorigin="anonymous"></script>
   <link rel="preload" href="logos/centrodecompras.jpg" as="image">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -58,7 +57,8 @@
     <main>
       <section>
         <h2>🛍️ Ofertas do Dia</h2>
-        <!-- Bloco de anúncio do AdSense (centro de compra) - Comentado para testes -->
+        <!-- Bloco de anúncio do AdSense (centro de compra) -->
+        <!-- Descomentar após corrigir CORS -->
         <!--
         <ins class="adsbygoogle"
              style="display:inline-block;width:728px;height:90px"
