--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="twitter:card" content="summary_large_image">
   <title>Centro de Compras - Ofertas do Dia</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4531749081462125" crossorigin="anonymous"></script>
-  <link rel="preload" href="logos/centrodecompras.jpg" as="image">
+  <!-- Corrigido o preload para corresponder ao arquivo usado -->
+  <link rel="preload" href="logos/logoscentrodecompras.jpeg" as="image">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
@@ -57,8 +58,7 @@
     <main>
       <section>
         <h2>🛍️ Ofertas do Dia</h2>
-        <!-- Bloco de anúncio do AdSense (centro de compra) -->
-        <!-- Descomentar após corrigir CORS -->
+        <!-- Bloco de anúncio do AdSense (centro de compra) - Comentado até corrigir CORS -->
         <!--
         <ins class="adsbygoogle"
              style="display:inline-block;width:728px;height:90px"
