--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="twitter:card" content="summary_large_image">
   <title>Centro de Compras - Ofertas do Dia</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4531749081462125" crossorigin="anonymous"></script>
-  <!-- Corrigido o preload para corresponder ao arquivo usado -->
   <link rel="preload" href="logos/logoscentrodecompras.jpeg" as="image">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -58,8 +57,7 @@
     <main>
       <section>
         <h2>🛍️ Ofertas do Dia</h2>
-        <!-- Bloco de anúncio do AdSense (centro de compra) - Comentado até corrigir CORS -->
-        <!--
+        <!-- Bloco de anúncio do AdSense -->
         <ins class="adsbygoogle"
              style="display:inline-block;width:728px;height:90px"
              data-ad-client="ca-pub-4531749081462125"
@@ -67,7 +65,6 @@
         <script>
              (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
-        -->
         <div class="lojas-parceiras">
           <h3>🌟 Lojas Parceiras</h3>
           <div class="grid-lojas">
