--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta name="google-adsense-account" content="ca-pub-4531749081462125">
   <meta name="twitter:card" content="summary_large_image">
-  <title>Centro de Compras - Ofertas do Dia</title>
+  <title>Centro de Compra - Ofertas do Dia</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4531749081462125" crossorigin="anonymous"></script>
   <link rel="preload" href="logos/logoscentrodecompras.jpeg" as="image">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
-  <link rel="icon" type="image/x-icon" href="logos/favicon.ico"> <!-- Favicon adicionado -->
+  <link rel="icon" type="image/x-icon" href="logos/favicon-32x32"> <!-- Favicon adicionado -->
 </head>
 <body>
   <header class="site-header">
