--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <header class="site-header">
     <div class="logo-container">
       <a href="index.html">
-        <img src="logos/logoscentrodecompras.jpg" alt="Centro de Compras" id="logo" width="150" height="50" onerror="this.src='logos/placeholder-logo.png'">
+        <img src="logos/logoscentrodecompras.jpeg" alt="Centro de Compras" id="logo" width="150" height="50" onerror="this.src='logos/placeholder-logo.png'">
       </a>
     </div>
     <div class="header-text">
