--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <div class="icon"><img src="logos/tiktok.png" alt="TikTok" loading="lazy" width="24" height="24"></div>
           <span>TikTok</span>
         </a>
-        <a href="https://www.instagram.com/cdccentrodecompras/" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.instagram.com/cdccentrodecompra/" target="_blank" rel="noopener noreferrer">
           <div class="icon"><img src="logos/Instagram.png" alt="Instagram" loading="lazy" width="24" height="24"></div>
           <span>Instagram</span>
         </a>
