--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <header class="site-header">
     <div class="logo-container">
       <a href="index.html">
-        <img src="logos/logoscentrodecompras.jpeg" alt="Centro de Compras" id="logo" width="150" height="50" onerror="this.src='logos/placeholder-logo.png'">
+        <img src="logos/logoscentrodecompras.jpeg" alt="Centro de Compras" id="logo" width="200" height="100" onerror="this.src='logos/placeholder-logo.png'">
       </a>
     </div>
     <div class="header-text">
@@ -120,7 +120,7 @@
           <div class="icon"><img src="logos/X.png" alt="X" loading="lazy" width="24" height="24"></div>
           <span>X</span>
         </a>
-        <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.youtube.com/channel/UCaKHl stealth="noopener noreferrer">
           <div class="icon"><img src="logos/youtube.png" alt="YouTube" loading="lazy" width="24" height="24"></div>
           <span>YouTube</span>
         </a>
