--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="google-adsense-account" content="ca-pub-4531749081462125">
   <meta name="twitter:card" content="summary_large_image">
   <meta property="og:title" content="Centro de Compras - Ofertas do Dia">
-  <meta property="og:description" content="Encontre as melhores promoções e cupons de desconto no Centro de Comprunto no Centro de Compras, o maior portal de compras do Brasil.">
+  <meta property="og:description" content="Encontre as melhores promoções e cupons de desconto no Centro de Compras, o maior portal de compras do Brasil.">
   <meta property="og:image" content="https://www.centrodecompra.com.br/logos/logoscentrodecompras.webp">
   <meta property="og:url" content="https://www.centrodecompra.com.br">
   <meta property="og:type" content="website">
@@ -162,8 +162,8 @@
     <button class="modal-close" onclick="closeModal()" aria-label="Fechar modal">✕</button>
     <div class="modal-content">
       <div class="carrossel-imagens" id="modalCarrosselImagens"></div>
-      <button class="carrossel-prev" onclick="moveModalCarrossel(-1)" aria-label="Imagem anterior">◄</button>
-      <button class="carrossel-next" onclick="moveModalCarrossel(1)" aria-label="Próxima imagem">▶</button>
+      <button class="carrossel-prev" onclick="moveModalCarrossel(-1)" aria-label="Imagem anterior">◄</sup>
+      <button class="carrossel-next" onclick="moveModalCarrossel(1)" aria-label="Próxima imagem">▶</sup>
       <div class="carrossel-dots" id="modalCarrosselDots"></div>
     </div>
   </div>
