--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
     <button class="modal-close" onclick="closeModal()" aria-label="Fechar modal">✕</button>
     <div class="modal-content">
       <div class="carrossel-imagens" id="modalCarrosselImagens"></div>
-      <button class="carrossel-prev" onclick="moveModalCarrossel(-1)" aria-label="Imagem anterior">◄</sup>
-      <button class="carrossel-next" onclick="moveModalCarrossel(1)" aria-label="Próxima imagem">▶</sup>
+      <button class="carrossel-prev" onclick="moveModalCarrossel(-1)" aria-label="Imagem anterior">◄</button>
+      <button class="carrossel-next" onclick="moveModalCarrossel(1)" aria-label="Próxima imagem">▶</button>
       <div class="carrossel-dots" id="modalCarrosselDots"></div>
     </div>
   </div>
